--- a/mocking-bird.html
+++ b/mocking-bird.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script src="mock.js"></script>
-    <div id='tweet'></div>
-    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Corrupt politician Joe Biden makes Crooked Hillary look like an amateur!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/1317891781648773121?ref_src=twsrc%5Etfw">October 18, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div id='tweet' style="text-align: center; transform: translateY(100%);"></div>
+    
 </body>
 </html>
